allow mockito to use byte-buddy-agent without warnings